# tolstack

./: .gitignore  Cargo.toml  LICENSE  README.md  save.json  save.yaml
.cargo/: config.toml
.github/workflows/: gh-pages.yml
book/: 404.html  algorithm-details.html  chapter_1.html  getting-started.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
src/: README.md  algorithm-details.md  analysis.rs  introduction.md  main.rs  model.rs  simulation_model.rs  tolerances.rs  ui.rs
src/analysis/: monte_carlo.rs  root_sum_square.rs  structures.rs
src/io/: dialogs.rs  export_csv.rs  saved_state.rs
src/ui/: components.rs  icon.pdn  icons.rs  style.rs
src/ui/components/: area_header.rs  area_mc_analysis.rs  area_stack_editor.rs  editable_label.rs  entry_tolerance.rs  filter_tolerance.rs  form_new_mc_analysis.rs  form_new_tolerance.rs  header.rs  list_tolerance_entries.rs  sub_editable_label.rs  tolerance_entry.rs  tolerance_filter.rs
