[package]
name = "TolStack"
version = "0.1.0"
authors = ["Aevyrie Roessler <aevyrie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_distr = "0.2.2"
rand = "0.7.3"
statistical = "1.0.0"
num = "0.2.1"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.51"
csv = "1.1.3"
iced = "0.1.1"
async-std = "1.0"
directories = "2.0"