[package]
name = "tolstack"
version = "0.2.0"
authors = ["Aevyrie Roessler <aevyrie@gmail.com>"]
edition = "2018"

[profile.release]
#debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_distr = "0.4.0"
rand = "0.8.1"
statistical = "1.0.0"
num = "0.3.1"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.51"
toml = "0.5.6"
csv = "1.1.3"
iced = { version = "0.2.0", features = ["async-std",] }
#iced = { git = "https://github.com/hecrj/iced", rev = "c393e450a1e314873667edb32e9ea3775d595c94", features = ["async-std",] }
iced_native = "0.3.0"
#iced_native = { git = "https://github.com/hecrj/iced", rev = "c393e450a1e314873667edb32e9ea3775d595c94" }
iced_graphics = "0.1.0"
#iced_graphics = { git = "https://github.com/hecrj/iced", rev = "c393e450a1e314873667edb32e9ea3775d595c94" }
async-std = "1.0"
directories-next = "2.0.0"
open = "1.4.0"
nfd = "0.0.4"
notify = "5.0.0-pre.2"
colored = "2.0.0"
chrono = "0.4"
webbrowser = "0.5.5"
image = "0.23.12"
